--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.5.1",
     "ant-design-vue": "^1.3.8",
     "cross-env": "^5.2.0",
+    "js-md5": "^0.7.3",
     "nuxt": "^2.4.0"
   },
   "devDependencies": {
