--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "ant-design-vue": "^1.3.8",
     "cross-env": "^5.2.0",
     "js-md5": "^0.7.3",
+    "moment": "^2.24.0",
     "nuxt": "^2.4.0",
     "vue-infinite-scroll": "^2.0.2",
     "vue-virtual-scroller": "^1.0.0-rc.2"
