--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.5.1",
     "ant-design-vue": "^1.3.8",
+    "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
     "js-md5": "^0.7.3",
+    "mavon-editor": "^2.7.4",
     "moment": "^2.24.0",
     "nuxt": "^2.4.0",
+    "vue-chartjs": "^3.4.2",
     "vue-infinite-scroll": "^2.0.2",
     "vue-virtual-scroller": "^1.0.0-rc.2"
   },
