--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "ant-design-vue": "^1.3.8",
     "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
+    "js-audio-recorder": "^1.0.6",
     "js-md5": "^0.7.3",
     "mavon-editor": "^2.7.4",
     "moment": "^2.24.0",
