--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,12 @@
     "ant-design-vue": "^1.3.8",
     "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
-    "js-audio-recorder": "^1.0.6",
     "js-md5": "^0.7.3",
     "mavon-editor": "^2.7.4",
     "moment": "^2.24.0",
     "nuxt": "^2.4.0",
     "vue-amap": "^0.5.10",
+    "vue-audio-recorder": "^3.0.1",
     "vue-chartjs": "^3.4.2",
     "vue-infinite-scroll": "^2.0.2",
     "vue-virtual-scroller": "^1.0.0-rc.2"
